--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -95,8 +95,8 @@ html(lang=lang)
 
                     - for (var i=0; i<3; i++)
                         .col.o-sectionCategories__col
-                            a.o-sectionCategories__single.m-categoryCell(href="#")
-                                img.m-categoryCell__img(src=URLbase+"img/product-thumb-medium.jpg" alt="#" title="#")
+                            a.o-sectionCategories__single.m-categoryCell.b-bgCover__wrap(href="#")
+                                img.m-categoryCell__img.b-bgCover__img(src=URLbase+"img/product-thumb-medium.jpg" alt="#" title="#")
                                 p.m-categoryCell__title Oblečení
 
 
