--- a/src/scss/partials/02_molecule/_m-categoryCell.scss
+++ b/src/scss/partials/02_molecule/_m-categoryCell.scss
@@ -3,26 +3,39 @@
     padding: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     transition: 0.3s ease all;
     margin: 10px 0;
     border-radius: $border-radius-primary;
     flex-wrap: wrap;
+    height: 220px;
+    position: relative;
+    z-index: 1;
 
     &:hover, &:active, &:focus{
         text-decoration: none;
         box-shadow: $box-shadow-primary;
     }
+    &::after{
+        content: "";
+        background: rgba(0,0,0,0.2);
+        z-index: 1;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
 .m-categoryCell__img{
-    height: 60px;
+    height: 100%;
 }
 .m-categoryCell__title{
-    @include f-16-primary-medium;
+    @include f-20-white-medium;
     margin: 0;
     margin-left: 0;
-    margin-top: 1rem;
-    flex-grow: 1;
     text-align: center;
+    z-index: 2;
+    margin-bottom: 20px;
 }
