--- a/src/scss/partials/03_organism/_o-hero.scss
+++ b/src/scss/partials/03_organism/_o-hero.scss
@@ -89,8 +89,8 @@
     }
 }
 .m-heroCarousel__caption{
-    padding: 20px;
-    background: rgba(0,0,0,0.4);
+    padding: 20px 50px;
+    background: rgba(0,0,0,0.7);
     z-index: 5;
     width: 50%;
     height: 100%;
@@ -111,13 +111,16 @@
 
 .m-heroCarousel__pagination{
     position: absolute;
+    bottom: 20px;
     display: flex;
-    margin-bottom: 20px;
 
     .swiper-pagination-bullet{
-        height: 12px;
-        width: 12px;
+        height: 3px;
+        width: 30px;
         margin: 4px;
+        border-radius: 0;
+        background: $bg-white;
+        opacity: 1;
     }
     .swiper-pagination-bullet-active{
         background: $bg-brand;
