--- a/src/scss/partials/03_organism/_o-navProducts.scss
+++ b/src/scss/partials/03_organism/_o-navProducts.scss
@@ -15,7 +15,9 @@
     height: 100%;
 }
 .o-navProducts__link, .o-navProducts__linkDesktop{
-    @include f-16-primary-medium;
+    @include f-16-primary-regular;
+    font-size: 1.5rem;
+    text-transform: uppercase;
     padding: 0 3rem;
     height: 100%;
     display: flex;
@@ -50,7 +52,8 @@
     }
 }
 .o-navProducts__linkDesktop{
-    @include f-16-white-medium;
+    @include f-16-white-regular;
+    font-size: 1.5rem;
     padding: 0 2rem;
     height: 100%;
     display: flex;
