--- a/src/pug/partials/_modal-add-to-cart.pug
+++ b/src/pug/partials/_modal-add-to-cart.pug
@@ -6,9 +6,9 @@
                 h5.modal-title.o-modal__title(id="modal-add-to-cart-heading") Zboží bylo přidáno do košíku
 
                 button.o-modal__close(type="button" class="close" data-dismiss="modal" aria-label="Close")
-                    span.a-icon.-cross.-red.o-modal__closeIcon
+                    span.a-icon.-cross.-white.o-modal__closeIcon
 
-            .modal-body.o-modal__body
+            .modal-body.o-modal__body.-product
                 - for (var i=0; i<1; i++)
                     .m-cartItemSingle
                         .m-cartItemSingle__col-1  
