--- a/src/pug/partials/_modal-login.pug
+++ b/src/pug/partials/_modal-login.pug
@@ -6,7 +6,7 @@
                 h5.modal-title.o-modal__title(id="modal-login-heading") Přihlášení
 
                 button.o-modal__close(type="button" class="close" data-dismiss="modal" aria-label="Close")
-                    span.a-icon.-cross.-red.o-modal__closeIcon
+                    span.a-icon.-cross.-white.o-modal__closeIcon
 
             .modal-body.o-modal__body
                 form.o-form(method="post" action="" name="login_form")
