--- a/src/pug/produkt-vypis.pug
+++ b/src/pug/produkt-vypis.pug
@@ -6,7 +6,7 @@ html(lang=lang)
         include partials/_navMain.pug
 
         section.o-pageHeading.-light.b-bgCover__wrap
-            include partials/_breadcrumb-transparent.pug
+            include partials/_breadcrumb.pug
             .container.o-pageHeading__container
                 h1.o-pageHeading__title Oblečení a obuv
 
