--- a/src/pug/ucet-neprihlaseny.pug
+++ b/src/pug/ucet-neprihlaseny.pug
@@ -17,7 +17,7 @@ html(lang=lang)
 
                             .m-alert.-danger Zadali jste špatné údaje
                             h2.o-form__title Přihlášení
-                            p.o-form__text Jako registrovaný uživatel získává slevu ve výši 1% na veškeré zboží, které není aktuálně ve slevě. .
+                            p.o-form__text Jako registrovaný uživatel získává slevu ve výši 1% na veškeré zboží, které není aktuálně ve slevě.
 
                             .o-form__group.m-formGroup
                                 input.m-formGroup__input(type="email" name="login_form_email" id="login_form_email" autocomplete="email" required placeholder=" ")
