--- a/src/scss/partials/03_organism/_o-cartUsefInfo.scss
+++ b/src/scss/partials/03_organism/_o-cartUsefInfo.scss
@@ -4,3 +4,9 @@
         padding-bottom: 1px;
     }
 }
+.o-cartUsefNotes{
+    background: $bg-white;
+    padding: 20px;
+    width: 100%;
+    margin-bottom: 4rem;
+}
