--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -28,43 +28,64 @@ html(lang=lang)
                                             .swiper-pagination.swiper-pagination-white.swiper-pagination-clickable.swiper-pagination-bullets.m-heroCarousel__pagination
 
 
-                        .swiper-slide.m-heroCarousel__slide.b-bgCover__wrap
-                            a.m-heroCarousel__link(href="#")
-                                figure.m-heroCarousel__figure
-                                    picture
-                                        source.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-srcset=URLbase+"img/carousel/2-991.webp" alt="#" media="(max-width: 991px)" type="image/webp")
-                                        source.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-srcset=URLbase+"img/carousel/2.webp" alt="#" type="image/webp")
-                                        source.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-srcset=URLbase+"img/carousel/2-991.jpg" alt="#" media="(max-width: 991px)" type="image/jpeg")
-                                        img.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-src=URLbase+"img/carousel/2.jpg" alt="#")
-                                    .swiper-lazy-preloader.m-heroCarousel__preloader.-light
-                                    .container
-                                        figcaption.m-heroCarousel__caption
-                                            .swiper-pagination.swiper-pagination-white.swiper-pagination-clickable.swiper-pagination-bullets.m-heroCarousel__pagination
-                                            h2.m-heroCarousel__title Nová kolekce lorem ipsum
-                                            p.m-heroCarousel__description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
-
 
                         .swiper-slide.m-heroCarousel__slide.b-bgCover__wrap
                             a.m-heroCarousel__link(href="#")
                                 figure.m-heroCarousel__figure
                                     picture
-                                        source.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-srcset=URLbase+"img/carousel/3-991.webp" alt="#" media="(max-width: 991px)" type="image/webp")
-                                        source.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-srcset=URLbase+"img/carousel/3.webp" alt="#" type="image/webp")
-                                        source.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-srcset=URLbase+"img/carousel/3-991.jpg" alt="#" media="(max-width: 991px)" type="image/jpeg")
-                                        img.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-src=URLbase+"img/carousel/3.jpg" alt="#")
+                                        source.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-srcset=URLbase+"img/carousel/1-991.webp" alt="#" media="(max-width: 991px)" type="image/webp")
+                                        source.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-srcset=URLbase+"img/carousel/1.webp" alt="#" type="image/webp")
+                                        source.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-srcset=URLbase+"img/carousel/1-991.jpg" alt="#" media="(max-width: 991px)" type="image/jpeg")
+                                        img.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-src=URLbase+"img/carousel/1.jpg" alt="#")
                                     .swiper-lazy-preloader.m-heroCarousel__preloader.-light
                                     .container
                                         figcaption.m-heroCarousel__caption
-                                            .swiper-pagination.swiper-pagination-white.swiper-pagination-clickable.swiper-pagination-bullets.m-heroCarousel__pagination
+                                            
                                             h2.m-heroCarousel__title Nová kolekce lorem ipsum
                                             p.m-heroCarousel__description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
-
+                                            .m-heroCarousel__btn
+                                                span.btn Více informací
+                                            .swiper-pagination.swiper-pagination-white.swiper-pagination-clickable.swiper-pagination-bullets.m-heroCarousel__pagination
 
         
 
+                        .swiper-slide.m-heroCarousel__slide.b-bgCover__wrap
+                            a.m-heroCarousel__link(href="#")
+                                figure.m-heroCarousel__figure
+                                    picture
+                                        source.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-srcset=URLbase+"img/carousel/1-991.webp" alt="#" media="(max-width: 991px)" type="image/webp")
+                                        source.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-srcset=URLbase+"img/carousel/1.webp" alt="#" type="image/webp")
+                                        source.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-srcset=URLbase+"img/carousel/1-991.jpg" alt="#" media="(max-width: 991px)" type="image/jpeg")
+                                        img.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-src=URLbase+"img/carousel/1.jpg" alt="#")
+                                    .swiper-lazy-preloader.m-heroCarousel__preloader.-light
+                                    .container
+                                        figcaption.m-heroCarousel__caption
+                                            
+                                            h2.m-heroCarousel__title Nová kolekce lorem ipsum
+                                            p.m-heroCarousel__description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                                            .m-heroCarousel__btn
+                                                span.btn Více informací
+                                            .swiper-pagination.swiper-pagination-white.swiper-pagination-clickable.swiper-pagination-bullets.m-heroCarousel__pagination
 
 
-
+                        .swiper-slide.m-heroCarousel__slide.b-bgCover__wrap
+                            a.m-heroCarousel__link(href="#")
+                                figure.m-heroCarousel__figure
+                                    picture
+                                        source.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-srcset=URLbase+"img/carousel/1-991.webp" alt="#" media="(max-width: 991px)" type="image/webp")
+                                        source.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-srcset=URLbase+"img/carousel/1.webp" alt="#" type="image/webp")
+                                        source.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-srcset=URLbase+"img/carousel/1-991.jpg" alt="#" media="(max-width: 991px)" type="image/jpeg")
+                                        img.swiper-lazy.m-heroCarousel__img.b-bgCover__img(data-src=URLbase+"img/carousel/1.jpg" alt="#")
+                                    .swiper-lazy-preloader.m-heroCarousel__preloader.-light
+                                    .container
+                                        figcaption.m-heroCarousel__caption
+                                            
+                                            h2.m-heroCarousel__title Nová kolekce lorem ipsum
+                                            p.m-heroCarousel__description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                                            .m-heroCarousel__btn
+                                                span.btn Více informací
+                                            .swiper-pagination.swiper-pagination-white.swiper-pagination-clickable.swiper-pagination-bullets.m-heroCarousel__pagination
+                                            
         section.o-sectionSale
             .container
                 h1.o-sectionSale__title Akční nabídka
@@ -155,6 +176,17 @@ html(lang=lang)
 
         include partials/_news-section.pug
         
+
+        section.o-store
+            .container
+                .o-store__single
+                    .o-store__singleImgWrap.b-bgCover__wrap
+                        img.o-store__singleImgWrap.b-bgCover__img(src=URLbase+"img/prodejna1.jpg" alt="" title="")
+                    .o-store__title Ostrava - Vítkovice
+                    .o-store__infoWrap
+                        p.o-store__text ul. Rudná čp. 1117/30a
+                        a.o-store__link(href="#") Více informací #[span.a-icon.-cheveron]
+
         include partials/_footer.pug
 
         include partials/_js-include.pug
