--- a/src/pug/partials/_modal-contact.pug
+++ b/src/pug/partials/_modal-contact.pug
@@ -24,11 +24,12 @@
                         span.m-formGroup__error Neplatný email
                         span.m-formGroup__success
 
-                    .o-form__group.m-formGroup
+                    .o-form__group.m-formGroup.-textarea
                         textarea.m-formGroup__input(name="question_form_text" id="question_form_text" rows="4" required placeholder=" ")
                         label.m-formGroup__label(for="question_form_text") Váš dotaz
                         span.m-formGroup__error Neplatný text
                         span.m-formGroup__success
+
 
                     .o-form__group.m-formGroup.-checkbox
                         input.m-formGroup__input(type="checkbox" name="question_form_legal" id="question_form_legal" required)
