--- a/src/pug/ucet-historie-objednavek.pug
+++ b/src/pug/ucet-historie-objednavek.pug
@@ -8,55 +8,50 @@ html(lang=lang)
         include partials/_breadcrumb.pug
         main
             .container
-                .row
-                    .col-12.col-sm-12.col-md-12.col-lg-4
-                        .m-userSidebar
-                            .m-userSidebar__top
-                                img.m-userSidebar__img(src=URLbase+"img/user-icon.svg" alt="Petr Novák" title="Petr Novák")
-                                .m-userSidebar__title Petr Novák
-                            .m-userSidebar__bottom
-                                a.m-userSidebar__link(href="#") #[span.a-icon.-personalInfo] Změna osobních údajů
-                                a.m-userSidebar__link.-active(href="#") #[span.a-icon.-calendar.-red] Historie objednávek
-                                a.m-userSidebar__link(href="#") #[span.a-icon.-logOut] Odhlásit
+                .m-userSidebar
+                    .m-userSidebar__top
+                        .m-userSidebar__title Uživatelský účet
+                    .m-userSidebar__bottom
+                        a.m-userSidebar__link(href="#") Změna osobních údajů
+                        a.m-userSidebar__link.-active(href="#") Historie objednávek
+                        a.m-userSidebar__link(href="#") Odhlásit
 
 
-                    .col-12.col-sm-12.col-md-12.col-lg-8
-                        .o-userHistory
-                            .o-userHistory__title Historie objednávek
-                            table.o-userHistory__table
-                                tr.o-userHistory__tr
-                                    th.o-userHistory__th Číslo nákupu
-                                    th.o-userHistory__th Datum
-                                    th.o-userHistory__th Cena
-                                    th.o-userHistory__th Stav objednávky
-                                    th.o-userHistory__th
-                                    
-                                tr.o-userHistory__tr
-                                    td.o-userHistory__id 1598879
-                                    td.o-userHistory__date 1. 1. 1970
-                                    td.o-userHistory__price 16 999 Kč
-                                    td
-                                        .o-userHistory__status.-success Dokončeno
-                                    td.o-userHistory__info
-                                        span.a-icon.-info(data-toggle="modal" data-target="#modal-history")
+                .o-userHistory
+                    table.o-userHistory__table
+                        tr.o-userHistory__tr
+                            th.o-userHistory__th Číslo nákupu
+                            th.o-userHistory__th Datum
+                            th.o-userHistory__th Cena
+                            th.o-userHistory__th Stav objednávky
+                            th.o-userHistory__th
+                            
+                        tr.o-userHistory__tr
+                            td.o-userHistory__id 1598879
+                            td.o-userHistory__date 1. 1. 1970
+                            td.o-userHistory__price 16 999 Kč
+                            td
+                                .o-userHistory__status.-success Dokončeno
+                            td.o-userHistory__info
+                                span.a-icon.-info(data-toggle="modal" data-target="#modal-history")
 
-                                tr.o-userHistory__tr
-                                    td.o-userHistory__id 1598879
-                                    td.o-userHistory__date 1. 1. 1970
-                                    td.o-userHistory__price 16 999 Kč
-                                    td
-                                        .o-userHistory__status.-info Odesláno poštou
-                                    td.o-userHistory__info
-                                        span.a-icon.-info(data-toggle="modal" data-target="#modal-history")
+                        tr.o-userHistory__tr
+                            td.o-userHistory__id 1598879
+                            td.o-userHistory__date 1. 1. 1970
+                            td.o-userHistory__price 16 999 Kč
+                            td
+                                .o-userHistory__status.-info Odesláno poštou
+                            td.o-userHistory__info
+                                span.a-icon.-info(data-toggle="modal" data-target="#modal-history")
 
-                                tr.o-userHistory__tr
-                                    td.o-userHistory__id 1598879
-                                    td.o-userHistory__date 1. 1. 1970
-                                    td.o-userHistory__price 16 999 Kč
-                                    td
-                                        .o-userHistory__status.-danger Vráceno
-                                    td.o-userHistory__info
-                                        span.a-icon.-info(data-toggle="modal" data-target="#modal-history")                 
+                        tr.o-userHistory__tr
+                            td.o-userHistory__id 1598879
+                            td.o-userHistory__date 1. 1. 1970
+                            td.o-userHistory__price 16 999 Kč
+                            td
+                                .o-userHistory__status.-danger Vráceno
+                            td.o-userHistory__info
+                                span.a-icon.-info(data-toggle="modal" data-target="#modal-history")                 
 
 
         include partials/_footer.pug
