--- a/src/scss/partials/02_molecule/_m-cartUserItem.scss
+++ b/src/scss/partials/02_molecule/_m-cartUserItem.scss
@@ -10,7 +10,7 @@
 }
 .m-cartUserItem__top{
     background: $bg-dark;
-    padding-top: 5rem;
+    padding: 2rem;
     border-top-left-radius: $border-radius-primary;
     border-top-right-radius: $border-radius-primary;
 }
@@ -36,7 +36,7 @@
 .m-cartUserItem_title{
     @include f-18-white-medium;
     text-align: center;
-    margin-bottom: 10px;
+    text-transform: uppercase;
 }
 .m-cartUserItem_subtitleWrap{
     display: flex;
