--- a/src/scss/partials/03_organism/_o-footer.scss
+++ b/src/scss/partials/03_organism/_o-footer.scss
@@ -1,6 +1,7 @@
 footer{
     background: $bg-dark;
     background-image: url("../img/bg-transparent.png");
+    background-position: center center;
 }
 
 /* ========================================================================== */
@@ -37,9 +38,9 @@ footer{
 }
 .m-emailSubscribe__btn{
     position: absolute;
-    top: 2px;
-    right: 2px;
-    bottom: 2px;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
     min-height: 5rem;
     height: auto;
 }
