--- a/src/scss/partials/03_organism/_o-navMain.scss
+++ b/src/scss/partials/03_organism/_o-navMain.scss
@@ -27,13 +27,17 @@
     z-index: 5;
 }
 @media screen and (max-width:991px){
-    .o-navMain{
-        height: 56px;
+    .o-nav{
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
-        z-index: 6;
+        height: 56px;
+        z-index: 8;
         box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
+    }
+    .o-navMain__inner{
+        justify-content: flex-end;
+        border: 0;
     }
 }
