--- a/src/pug/kontakty.pug
+++ b/src/pug/kontakty.pug
@@ -16,58 +16,49 @@ html(lang=lang)
                 .printArea
                     article
                         .row
-                            .col-12.col-sm-12.col-md-6
+                            .col-12.col-sm-12.col-md-12
                                 .m-contactItem
-                                    h2.m-contactItem__title Zákaznická linka
-                                    .m-contactItem_content
-                                        strong.m-contactItem__subtitle Provozní doba: Po-Pá 8.00–16.00
-                                        .m-contactItem__phoneWrap
-                                            span.a-icon.-phone.m-contactItem__icon 
-                                            .m-contactItem__phone +420 606 311 796
-                                        p.m-contactItem__text Na tomto telefonním čísle zjistíte obecné informace o dostupnostech jednotlivých produktů, době dodání, technické specifikace a máte možnost provést telefonickou objednávku zboží.
-                                        strong.m-contactItem__subtitle Mimo pracovní dobu, mailově na info@best-nabytek.cz
+                                    h2.m-contactItem__title CENTRÁLA - zásilkový obchod, velkoobchod, sklady
+                                    .row
+                                        .col-12.col-sm-12.col-md-6
+                                            .m-contactItem_content
+                                                strong.m-contactItem__subtitle GENERAL ARMY, spol. s r.o.
+                                                strong.m-contactItem__subtitle Pionýrů 839 ( areál SELIKO Park )
+                                                strong.m-contactItem__subtitle 73801, Frýdek-Místek
+                                                strong.m-contactItem__subtitle Česká Republika
+                                        .col-12.col-sm-12.col-md-6
+                                            .m-contactItem_content
+                                                strong.m-contactItem__subtitle GENERAL ARMY, spol. s r.o.
+                                                strong.m-contactItem__subtitle Pionýrů 839 ( areál SELIKO Park )
+                                                strong.m-contactItem__subtitle 73801, Frýdek-Místek
+                                                strong.m-contactItem__subtitle Česká Republika
 
+                                    br
+                                    p.m-contactItem__text Na uvedené adrese se nachází sklady, drobný prodej pouze v KAMENNÝCH PRODEJNÁCH. Provozní doba pro vyzvednutí zásilek e-shopu Po-Čt 7:30-16:00h, Pá 7:30-14:30h.( vchod A, 1. patro, dvěře označeny " výdejna " ). Na výdejně lze platit hotově popř. platební kartou.             
 
-                            .col-12.col-sm-12.col-md-6
+                            .col-12.col-sm-12.col-md-12
                                 .m-contactItem
-                                    h2.m-contactItem__title Stav objednávek
-                                    .m-contactItem_content
-                                        strong.m-contactItem__subtitle Provozní doba: Po-Pá 8.00–16.00
-                                        .m-contactItem__phoneWrap
-                                            span.a-icon.-phone.m-contactItem__icon 
-                                            .m-contactItem__phone +420 606 311 796
-                                        p.m-contactItem__text Na tomto telefonním čísle zjistíte stav objednávky.
-                                        strong.m-contactItem__subtitle Osobní odběr, pouze po předchozí tel. domluvě na +420 602 161 304
-                                        strong.m-contactItem__subtitle Mimo pracovní dobu, mailově na info@best-nabytek.cz
+                                    h2.m-contactItem__title ZÁSILKOVÝ OBCHOD:
+                                    .row
+                                        .col-12.col-sm-12.col-md-6
+                                            .m-contactItem_content
+                                                strong.m-contactItem__subtitle Zákaznický servis - informace
+                                                strong.m-contactItem__phone Pionýrů 839 ( areál SELIKO Park )
+                                                strong.m-contactItem__subtitle (Provozní doba : Po-Čt: 8-16h, Pá: 8-14:30h)
+                                                p.m-contactItem__text skype:  general.army1
+                                                p.m-contactItem__text ICQ:  391684575
 
-                            .col-12.col-sm-12.col-md-6
-                                .m-contactItem
-                                    h2.m-contactItem__title Informace o přepravě zboží
-                                    .m-contactItem_content
-                                        strong.m-contactItem__subtitle Provozní doba: Po-Pá 8.00–16.00
-                                        .m-contactItem__phoneWrap
-                                            span.a-icon.-phone.m-contactItem__icon 
-                                            .m-contactItem__phone +420 602 764 755
-                                        strong.m-contactItem__subtitle Mimo pracovní dobu, mailově na info@best-nabytek.cz
+                                        .col-12.col-sm-12.col-md-6
+                                            .m-contactItem_content
+                                                strong.m-contactItem__subtitle Příjem objednávek
+                                                p.m-contactItem__text tel: +420 737 465 465
+                                                p.m-contactItem__text email : obchod@army-shop.cz 
 
+                                                strong.m-contactItem__subtitle Reklamace
+                                                p.m-contactItem__text email : jana.skarkova@army-shop.cz
 
-                            .col-12.col-sm-12.col-md-6
-                                .m-contactItem
-                                    h2.m-contactItem__title Reklamace
-                                    .m-contactItem_content
-                                
-                                        strong.m-contactItem__subtitle Zde podávejte případné reklamace. Reklamaci provedete kliknutím na tlačítko níže s názvem REKLAMACE. Máte zde možnost přiložit fotografie a popsat případné nedostatky.
-                                        .m-contactItem__button
-                                            button.btn.-secondary(data-toggle="modal" data-target="#modal-reklamace") #[span.-icon.-envelope] Reklamační formulář
-
-
-                        .page-contact__map
-                            iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2568.929481311064!2d18.117002515897177!3d49.91889843340268!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47115ff8bcb3fc29%3A0xa8da6742800f01ee!2sAC+Energo+S.r.o.!5e0!3m2!1scs!2scz!4v1533737471476" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen)
-
-                        h3 Informační oznámení o EET
-                        p "Podle zákona o evidenci tržeb je prodávající povinen  vystavit  kupujícímu  účtenku.  Zároveň  je povinen zaevidovat přijatou  tržbu  u správce  daně  online;  v  případě  technického  výpadku  pak  nejpozději  do 48 hodin.", eviduje-li poplatník v daném pokladním místě tržby v běžném režimu.
-
-
+                                                strong.m-contactItem__subtitle Sklad, Velkosklad  
+                                                p.m-contactItem__text email: velkoobchod@army-shop.cz 
         include partials/_footer.pug
 
         include partials/_js-include.pug
