--- a/src/scss/partials/03_organism/_o-modal.scss
+++ b/src/scss/partials/03_organism/_o-modal.scss
@@ -53,6 +53,13 @@
     &.-product{
         padding: 20px;
     }
+    table{
+        width: 100%;
+        margin-top: 4rem;
+        font-size: 1.6rem;
+        text-transform: uppercase;
+        font-weight: 500;
+    }
 }
 .o-modal__footer{
     display: flex;
