--- a/src/scss/partials/03_organism/_o-pageHeading.scss
+++ b/src/scss/partials/03_organism/_o-pageHeading.scss
@@ -15,6 +15,11 @@
         }
         .o-pageHeading__title{
             @include f-48-primary-bold;
+            font-size: 4rem;
+            
+            &::after {
+                content: none;
+            }
         }
         .m-breadcrumb{
             position: absolute;
